--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./main.css">
+    <title></title>
 </head>
 
 <body>
 
-   <h1>12121тест</h1>
-   <p></p>
+    <h1>Домашнее задание</h1>
+
+    <p><a href="../../img/peep_icon1.png" target="_blank">Абсолютный</a></p>
+    <p><a href="https://get.wallhere.com/photo/nature-mountains-clouds-landscape-1538657.jpg"
+            target="_blank">Относительный</a></p>
 
 </body>
 
