--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Домашнее задание</h1>
 
     <p><a href="https://cartmans121.github.io/Zadanie1/img/peep_icon1.png" target="_blank">Абсолютный</a></p>
-    <p><a href="https://get.wallhere.com/photo/nature-mountains-clouds-landscape-1538657.jpg"
+    <p><a href=""../../img/peep_icon2.png""
             target="_blank">Относительный</a></p>
 
 </body>
