--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -11,7 +11,7 @@
     <h1>Домашнее задание</h1>
 
     <p><a href="https://cartmans121.github.io/Zadanie1/img/peep_icon1.png" target="_blank">Абсолютный</a></p>
-    <p><a href="../../img/peep_icon2.png"
+    <p><a href="cartmans121.github.io/../../img/peep_icon2.png"
             target="_blank">Относительный</a></p>
 
 </body>
