--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 
 <body>
 
-    <h1>Домашнее задание</h1>
+    <h1>Homework #1</h1>
 
-    <p><a href="https://cartmans121.github.io/Zadanie1/img/peep_icon1.png" target="_blank">Абсолютный</a></p>
-    <p><a href="../../img/peep_icon2.png"
-            target="_blank">Относительный</a></p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil fugiat inventore quibusdam beatae fugit ullam
+        pariatur laboriosam velit hic ipsum, minima at illo? Totam, accusantium architecto cum ea sed quae!
+    </p>
+
+    <img src="https://cartmans121.github.io/Zadanie1/img/peep_icon1.png" alt="Картинка">
+    <img src="https://cartmans121.github.io/Zadanie1/img/peep_icon2.png" alt="Картинка">
+
 
 </body>
 
